--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Realities</h2>
-									<p>Fractured Haze offers a completely customized experience. All you need to do is _______</p>
+									<p>At Fractured Haze customer satisfaction is our top priority! Have your realities tailor made to your liking with your selection of Husks to choose from. Watch your PROXY take form and live right before your eyes. Custom options are also available, don’t be shy! Ask your Reality Advisor. 
+</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
