--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
 						
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">PROXY (1.0)</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p> PROXY (1.0) is a response to our previous game COGNIZANCE, a commentary on the fear of the artist working a “dull desk job” as their creations surpass and leave them. Within the story Erik creates Hexen illegally as his statement of rebellion against his employers at Fractured Haze, as it against company laws for their employees to input themselves into the realities provided by the corporation, throughout the gameplay we see Hexen break free from his “prison” and into the system in search of Erik, this is a take on how our ambition wishes to achieve the grand visualization we see in our heads but slips away due to other constraints, in this case the fact that Erik is at work and cannot commit to his creative practice causes it to slip through the cracks 
+
+ Both COGNIZANCE and PROXY (1.0) reflect on our journey throughout New Media with every twist and turn that we have run into over the years. This piece focuses on the stressful and repetitive nature of trying to get elements of a project to work with little guidance throughout the process. As New Media students we are given a phenomenal base in which we can branch out and use new concepts and techniques to incorporate in new projects, however as our ambitions grow there is only so much assistance we can receive from our professors and peers, at that time it is up to us to gauge how we pursue a project. </p>
 							</article>
 					</div>
 
