--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/plugboard.jpeg" alt="" />
 								</div>
 							</section>
 
