--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 									<p>At Fractured Haze customer satisfaction is our top priority! Have your realities tailor made to your liking with your selection of Husks to choose from. Watch your PROXY take form and live right before your eyes. Custom options are also available, don’t be shy! Ask your Reality Advisor. 
 </p>
 								</div>
-								<div class="image filtered tinted" data-position="top left">
+								<div class="image filtered tinted span 1-75" data-position="25% 25%">
 									<img src="images/plugboard.jpeg" alt="" />
 								</div>
 							</section>
