--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </p>
 								</div>
 								<div class="image filtered tinted span 1-75" data-position="25% 25%">
-									<img src="images/plugboard.jpeg" alt="" />
+									<img src="images/pic02.png" alt="" />
 								</div>
 							</section>
 
