--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
   Learn more
 </button>
- 
+ <div class="modal-open">
 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -100,6 +100,7 @@
     </div>
   </div>
 </div> 
+	 </div>
 	
 									<!--<a href="#intro" class="button primary color2">Learn More</a>
 								</div>
