--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
  									 	Learn more
 									</button>
 									<div class="modal-open">
-										<div class="modal fade show" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+										<div class="modal" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   											<div class="modal-dialog" role="document">
     												<div class="modal-content">
 												      <div class="modal-header">
