--- a/index.html
+++ b/index.html
@@ -71,9 +71,28 @@
 									<h2 class="major">Want to get started?</h2>
 									<p>It only takes a few minutes to change your life forever. Click the button below to start building your new reality.</p>
 									
+									<div class="modal" id="largeShoes" tabindex="-1" role="dialog" aria-labelledby="modalLabelLarge" aria-hidden="true">
+									<div class="modal-dialog modal-sm">
+									<div class="modal-content">
+
+									<div class="modal-header">
+									<h4 class="modal-title" id="modalLabelLarge">Boot Polish</h4>
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+									</button>
+									</div>
+
+									<div class="modal-body">
+									Remove that faded effect by adding boot polish!
+									</div>
+
+									</div>
+									</div>
+									</div>
+									
 									<!--MODAL-->
 									<!-- Button trigger modal -->
-									<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+									<!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
  									 	Learn more
 									</button>
 									<div class="modal-open">
@@ -95,7 +114,7 @@
  												</div>
   											</div>
 										</div> 
-									 </div>
+									 </div>-->
 								</div>
 							</section> 
 	
