--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
  									 	Learn more
 									</button>
-									<div class="modal-open">
+									<!--<div class="modal-open">-->
 										<div class="modal hide" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   											<div class="modal-dialog" role="document">
     												<div class="modal-content">
@@ -97,7 +97,7 @@
   											</div>
 										</div> 
 									 </div>
-								</div>
+								<!--</div>-->
 							</section> 
 	
 									<!--<a href="#intro" class="button primary color2">Learn More</a>
