--- a/index.html
+++ b/index.html
@@ -77,27 +77,23 @@
 									<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
  									 	Learn more
 									</button>
-									<!--<div class="modal-open">-->
-										<div class="modal hide" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  											<div class="modal-dialog" role="document">
-    												<div class="modal-content">
-												      <div class="modal-header">
-        												  <h5 class="modal-title" id="exampleModalLongTitle">Proxy 1.0</h5>
-													        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-													          <span aria-hidden="true">&times;</span>
- 													       </button>
-     												      </div>
-										       			 <div class="modal-body">
-														<p> PROXY (1.0) is a response to our previous game COGNIZANCE, a commentary on the fear of the artist working a “dull desk job” as their creations surpass and leave them. Within the story Erik creates Hexen illegally as his statement of rebellion against his employers at Fractured Haze, as it against company laws for their employees to input themselves into the realities provided by the corporation, throughout the gameplay we see Hexen break free from his “prison” and into the system in search of Erik, this is a take on how our ambition wishes to achieve the grand visualization we see in our heads but slips away due to other constraints, in this case the fact that Erik is at work and cannot commit to his creative practice causes it to slip through the cracks. </p>
- 														<p>Both COGNIZANCE and PROXY (1.0) reflect on our journey throughout New Media with every twist and turn that we have run into over the years. This piece focuses on the stressful and repetitive nature of trying to get elements of a project to work with little guidance throughout the process. As New Media students we are given a phenomenal base in which we can branch out and use new concepts and techniques to incorporate in new projects, however as our ambitions grow there is only so much assistance we can receive from our professors and peers, at that time it is up to us to gauge how we pursue a project.</p>
-     												      </div>
-      												      <div class="modal-footer">
-												      </div>
- 												</div>
-  											</div>
-										</div> 
-									 </div>
-								<!--</div>-->
+									<div class="modal hide" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLong" aria-hidden="true">
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+											      <div class="modal-header">
+												  <h5 class="modal-title" id="exampleModalLong">Proxy 1.0</h5>
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+													  <span aria-hidden="true">&times;</span>
+												       </button>
+											      </div>
+											      <div class="modal-body">
+													<p> PROXY (1.0) is a response to our previous game COGNIZANCE, a commentary on the fear of the artist working a “dull desk job” as their creations surpass and leave them. Within the story Erik creates Hexen illegally as his statement of rebellion against his employers at Fractured Haze, as it against company laws for their employees to input themselves into the realities provided by the corporation, throughout the gameplay we see Hexen break free from his “prison” and into the system in search of Erik, this is a take on how our ambition wishes to achieve the grand visualization we see in our heads but slips away due to other constraints, in this case the fact that Erik is at work and cannot commit to his creative practice causes it to slip through the cracks. </p>
+													<p>Both COGNIZANCE and PROXY (1.0) reflect on our journey throughout New Media with every twist and turn that we have run into over the years. This piece focuses on the stressful and repetitive nature of trying to get elements of a project to work with little guidance throughout the process. As New Media students we are given a phenomenal base in which we can branch out and use new concepts and techniques to incorporate in new projects, however as our ambitions grow there is only so much assistance we can receive from our professors and peers, at that time it is up to us to gauge how we pursue a project.</p>
+											      </div>
+											</div>
+										</div>
+									 </div> 
+								   </div>
 							</section> 
 	
 									<!--<a href="#intro" class="button primary color2">Learn More</a>
