--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							</section>
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight large left">
+							<section class="panel spotlight medium left">
 								<div class="content span-5">
 									<h2 class="major">Want to get started?</h2>
 									<p>It only takes a few minutes to change your life forever. Click the button below to start building your new reality.</p>
@@ -74,17 +74,17 @@
 									
 									<!--MODAL-->
 									<!-- Button trigger modal -->
-									<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+									<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
  									 	Learn more
 									</button>
-									<div class="modal hide" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLong" aria-hidden="true">
+									<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 										<div class="modal-dialog" role="document">
 											<div class="modal-content">
 											      <div class="modal-header">
-												  <h5 class="modal-title" id="exampleModalLong">Proxy 1.0</h5>
-													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-													  <span aria-hidden="true">&times;</span>
-												       </button>
+												<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+												<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+												  <span aria-hidden="true">&times;</span>
+												</button>
 											      </div>
 											      <div class="modal-body">
 													<p> PROXY (1.0) is a response to our previous game COGNIZANCE, a commentary on the fear of the artist working a “dull desk job” as their creations surpass and leave them. Within the story Erik creates Hexen illegally as his statement of rebellion against his employers at Fractured Haze, as it against company laws for their employees to input themselves into the realities provided by the corporation, throughout the gameplay we see Hexen break free from his “prison” and into the system in search of Erik, this is a take on how our ambition wishes to achieve the grand visualization we see in our heads but slips away due to other constraints, in this case the fact that Erik is at work and cannot commit to his creative practice causes it to slip through the cracks. </p>
