--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium left">
-								<div class="content span-5">
+								<div class="content span-3-75">
 									<h2 class="major">Want to get started?</h2>
 									<p>It only takes a few minutes to change your life forever. Click the button below to start building your new reality.</p>
 									
