--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
-								<div class="content color0 span-3-75">
+								<div class="content color0 span-7">
 									<h1 class="major">Welcome to your future.</h1>
 									<p>We are <strong>Fractured Haze.</strong> Free Your Mind.</p>
 									<ul class="actions">
