--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLongTitle">Proxy 1.0</h3>
+        <h3 class="modal-title" id="exampleModalLongTitle">Proxy 1.0</h3> 
+		
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+			
+			  <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Close</button>
+         
         </button>
       </div>
       <div class="modal-body">
@@ -94,8 +97,8 @@
  <p>Both COGNIZANCE and PROXY (1.0) reflect on our journey throughout New Media with every twist and turn that we have run into over the years. This piece focuses on the stressful and repetitive nature of trying to get elements of a project to work with little guidance throughout the process. As New Media students we are given a phenomenal base in which we can branch out and use new concepts and techniques to incorporate in new projects, however as our ambitions grow there is only so much assistance we can receive from our professors and peers, at that time it is up to us to gauge how we pursue a project.</p>
       </div>
       <div class="modal-footer">
-        <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>-->
+        
+       <!-- <button type="button" class="btn btn-primary">Save changes</button>-->
       </div>
     </div>
   </div>
