--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </button>
       </div>
       <div class="modal-body">
-	      <iframe width=100% src="https://www.youtube.com/embed/sdPtEm43dOs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	      <iframe width=100%  height=500px src="https://www.youtube.com/embed/sdPtEm43dOs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
 	      <p> PROXY (1.0) is a response to one of our previous projects, COGNIZANCE. It is a commentary on the fear of an artist working a “dull desk job” as their own creations surpass and leave them. Within the story Erik creates Hexen illegally as his statement of rebellion against his employers at Fractured Haze, as it's against company policies for employees to input themselves into the realities provided by the corporation. Throughout the experience, we see Hexen break free from his “prison” and into the System in search of Erik. This is a take on how our ambition wishes to achieve the grand visualization we see in our heads but slips away due to other constraints, in this case the fact that Erik is at work and cannot commit to his creative practice causes it to slip through the cracks. </p>
 
