--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLongTitle">Proxy 1.0</h3> 
+        <h3 class="modal-title" id="exampleModalLongTitle">PROXY (1.0)</h3> 
 		
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 			
