--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-    <meta http-equiv="refresh" content="0; URL='http://instagram.com/hex.hackgames'" />
-		<title>Fractured Haze Realities Corp.</title>
+    <meta http-equiv="refresh" content="0; URL='http://instagram.com/fracturedhaze'" />
+		<title>Fractured Haze.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
