--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
     <meta http-equiv="refresh" content="0; URL='http://instagram.com/fracturedhaze'" />
-		<title>Fractured Haze.</title>
+		<title>Fractured Haze</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
